--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -36,7 +36,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="%menu.help">
                   <items>
-                    <MenuItem fx:id="MIAboutUBUGrades" mnemonicParsing="false" onAction="#aboutUBUGrades" text="%menu.about" />
+                    <MenuItem fx:id="MIAboutUBUGrades" mnemonicParsing="false" onAction="#aboutApp" text="%menu.about" />
                   </items>
                 </Menu>
               </menus>
