--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -73,11 +73,14 @@ body
    	font-weight: bold;
 }
 	
+
 	
 .chart-container
 {
 	position: relative;
 	margin: auto;
+	height: 90vh;
+	width: 90vw;
 	display: none;
 }
 	
