--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -1,8 +1,8 @@
-body
+html,body
 {
-	background: #ffffff;
-	padding: 0px;
-	margin: 0px;
+  width:  100%;
+  height: 100%;
+  margin: 0;
 }
 .imginicio
 {
@@ -77,10 +77,8 @@ body
 	
 .chart-container
 {
-	position: relative;
-	margin: auto;
-	height: 90vh;
-	width: 90vw;
+	height:95%;
+	width:100%;
 	display: none;
 }
 	
@@ -118,7 +116,6 @@ body
 }
 	
 .pestañas {
-	height: 30px;
 	position: relative;
 	display: inline-block;
 	padding-right: 2px;
