--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -66,6 +66,7 @@
 				<GridPane GridPane.columnIndex="1">
 					<columnConstraints>
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 					</columnConstraints>
@@ -81,13 +82,14 @@
 						<Label id="topBarLabels" fx:id="lblActualCourse" text="%label.course" GridPane.columnIndex="1" />
 						<Label id="topBarLabels" fx:id="lblActualHost" text="%label.host" GridPane.columnIndex="2" />
 						<ImageView fx:id="userPhoto" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label id="topBarLabels" fx:id="lblLastUpdate" text="%label.lastupdate" GridPane.columnIndex="3" />
 					</children>
 				</GridPane>
 			</children>
 		</GridPane>
 	</top>
 	<center>
-		<SplitPane fx:id="splitPane" dividerPositions="0.0" BorderPane.alignment="CENTER">
+		<SplitPane fx:id="splitPane" dividerPositions="0.3422459893048128" BorderPane.alignment="CENTER">
 			<items>
 				<BorderPane maxWidth="600.0" prefHeight="200.0" prefWidth="200.0">
 					<center>
@@ -95,14 +97,16 @@
 							<items>
 								<BorderPane prefHeight="200.0" prefWidth="200.0">
 									<top>
-										<Pane minHeight="64.0" prefHeight="64.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+										<Pane minHeight="64.0" prefHeight="93.0" prefWidth="392.0" BorderPane.alignment="CENTER">
 											<children>
 												<Label fx:id="lblCountParticipants" layoutX="6.0" layoutY="6.0" text="%label.participants" />
 												<TextField fx:id="tfdParticipants" layoutX="6.0" layoutY="31.0" prefHeight="25.0" prefWidth="100.0" promptText="%label.filter" />
 												<Label layoutX="115.0" layoutY="35.0" text="%label.group" />
-												<Label layoutX="135.0" layoutY="6.0" text="%label.rol" />
-												<ChoiceBox fx:id="slcRole" layoutX="162.0" layoutY="4.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
-												<ChoiceBox fx:id="slcGroup" layoutX="162.0" layoutY="33.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+												<Label layoutX="135.0" layoutY="5.0" text="%label.rol" />
+												<ChoiceBox fx:id="slcRole" layoutX="160.0" layoutY="5.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+												<ChoiceBox fx:id="slcGroup" layoutX="160.0" layoutY="35.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+                                    <ChoiceBox fx:id="slcActivity" layoutX="160.0" layoutY="65.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+                                    <Label layoutX="48.0" layoutY="67.0" text="%label.activity" />
 											</children>
 										</Pane>
 									</top>
@@ -198,7 +202,7 @@
 																			<children>
 																				<Label layoutX="6.0" layoutY="5.0" text="%label.section" />
 																				<TextField fx:id="sectionTextField" layoutX="6.0" layoutY="26.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
-                                                            <CheckBox fx:id="checkBoxSection" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" selected="true" text="%label.withhidden" />
+                                                            <CheckBox fx:id="checkBoxSection" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
 																			</children>
 																		</Pane>
 																	</top>
@@ -220,7 +224,7 @@
 																			<children>
 																				<Label layoutX="6.0" layoutY="5.0" text="%label.coursemodule" />
 																				<TextField fx:id="courseModuleTextField" layoutX="6.0" layoutY="26.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
-                                                            <CheckBox fx:id="checkBoxCourseModule" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" selected="true" text="%label.withhidden" />
+                                                            <CheckBox fx:id="checkBoxCourseModule" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
                                                             <ChoiceBox fx:id="choiceBoxCourseModule" layoutX="140.0" layoutY="30.0" prefWidth="150.0" />
 																			</children>
 																		</Pane>
