--- a/resources/view/Welcome.fxml
+++ b/resources/view/Welcome.fxml
@@ -42,10 +42,37 @@
 				<Font size="25.0" />
 			</font>
 		</Label>
-		<ListView fx:id="listCourses" layoutX="75.0" layoutY="174.0" prefHeight="280.0" prefWidth="650.0" styleClass="list-view-intro" stylesheets="@/css/style.css">
-         <cursor>
-            <Cursor fx:constant="DEFAULT" />
-         </cursor></ListView>
+      <TabPane fx:id="tabPane" layoutX="75.0" layoutY="175.0" prefHeight="290.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="%text.all">
+               <content>
+            		<ListView fx:id="listCourses" styleClass="list-view-intro" stylesheets="@/css/style.css">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </ListView>
+               </content>
+            </Tab>
+          <Tab text="text.favorite">
+               <content>
+                  <ListView fx:id="listCoursesFavorite" prefHeight="250.0" prefWidth="650.0" styleClass="list-view-intro" stylesheets="@/css/style.css">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </ListView>
+               </content>
+            </Tab>
+            <Tab text="text.recent">
+               <content>
+                  <ListView fx:id="listCoursesRecent" prefHeight="250.0" prefWidth="650.0" styleClass="list-view-intro" stylesheets="@/css/style.css">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </ListView>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
 		<Label layoutX="310.0" layoutY="145.0" text="%label.selectcourse">
 			<font>
 				<Font size="15.0" />
